<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tlo_1"
    tools:context=".ui.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/AppTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/colorFont" />

    <Button
        android:id="@+id/main_activity_button_multi"
        android:layout_width="@dimen/main_button_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_start"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="@dimen/default_margin_end"
        android:background="@drawable/main_button"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/main_activity_button_multi"
        android:textColor="@color/colorFont"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_button_single" />

    <Button
        android:id="@+id/main_activity_button_single"
        android:layout_width="@dimen/main_button_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_start"
        android:layout_marginEnd="@dimen/default_margin_end"
        android:layout_marginBottom="@dimen/default_margin_bottom"
        android:background="@drawable/main_button"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/main_activity_button_single"
        android:textColor="@color/colorFont"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.19"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_toolbar"
 />

    <Button
        android:id="@+id/main_activity_button_tutorial"
        android:layout_width="@dimen/main_button_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_start"
        android:layout_marginTop="@dimen/big_margin_top"
        android:layout_marginEnd="@dimen/default_margin_end"
        android:background="@drawable/main_button"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/main_activity_button_tutorial"
        android:textColor="@color/colorFont"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_button_multi" />

    <Button
        android:id="@+id/main_activity_button_logout"
        android:layout_width="@dimen/main_button_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_start"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="@dimen/default_margin_end"
        android:background="@drawable/main_button"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/main_activity_button_logout"
        android:textColor="@color/colorFont"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_button_tutorial" />

</androidx.constraintlayout.widget.ConstraintLayout>