<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.TutorialActivity" android:background="@color/colorPrimary">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp" app:layout_constraintTop_toBottomOf="@+id/tutorial_activity_image_pikachu"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="@dimen/default_margin_start"
            android:layout_marginEnd="@dimen/default_margin_end" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="@dimen/default_margin_bottom"
            android:layout_marginTop="@dimen/default_margin_top">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">
            <TextView
                    android:text="@string/tutorial_activity_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tutorial_activity_text_how_to_play"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="@dimen/default_margin_start" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="@dimen/default_margin_end"
                    android:fontFamily="@font/architects_daughter" android:textAlignment="center"
                    android:textSize="16sp"
                    android:layout_marginTop="@dimen/default_margin_top"
                    app:layout_constraintTop_toBottomOf="@+id/tutorial_activity_image_pikachu"/>

            <ImageView
                android:id="@+id/tutorial_activity_image_shake"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/default_no_image_found"
                app:srcCompat="@drawable/shake" />
            <TextView
                    android:text="@string/tutorial_activity_text_shake"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/tutorial_activity_text_shake"
                    android:textAlignment="center"
                    android:fontFamily="@font/architects_daughter"/>
        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/game_activity_button_back"
        android:layout_width="33dp"
        android:layout_height="33dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/back_arrow"
        app:layout_constraintBottom_toBottomOf="@+id/game_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/game_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/AppTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Instrukcja"
        app:titleTextColor="@color/colorFont" />

    <ImageView
        android:id="@+id/tutorial_activity_image_pikachu"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/tutorial_image_pikachu_height"
        android:layout_marginStart="@dimen/default_margin_start"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="@dimen/default_margin_end"
        android:contentDescription="@string/default_no_image_found"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_toolbar"
        app:srcCompat="@drawable/tutorial" />
</androidx.constraintlayout.widget.ConstraintLayout>